--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,9 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            sudo docker pull 100xdevs/web-app:latest
+            sudo docker pull lucirace/bharat_wallet_user:latest
             sudo docker stop web-app || true
             sudo docker rm web-app || true
-            sudo docker run -d --name web-app -p 3005:3000 100xdevs/web-app:latest
+            sudo docker run -d --name web-app -p 3005:3000 lucirace/bharat_wallet_user:latest
 
 #Replace with your Docker Hub username and repository
