--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,6 @@ jobs:
             sudo docker pull lucirace/bharat_wallet_user:latest
             sudo docker stop web-app || true
             sudo docker rm web-app || true
-            sudo docker run -d -p 3005:3000 --name web-app lucirace/bharat_wallet_user:latest
+            sudo docker run -d -p 3005:3000 --name web-app -e DATABASE_URL="${{secrets.DATABASE_URL}}" -e NEXTAUTH_URL="${{secrets.NEXTAUTH_URL}}" lucirace/bharat_wallet_user:latest
 
 
