--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             sudo docker pull lucirace/bharat_wallet_user:latest
+            sudo docker images
             sudo docker stop web-app || true
             sudo docker rm web-app || true
             sudo docker run -d -p 3005:3000 --name web-app -e DATABASE_URL="${{secrets.DATABASE_URL}}" -e NEXTAUTH_URL="${{secrets.NEXTAUTH_URL}}" lucirace/bharat_wallet_user:latest
