--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
         run: npm install
 
       - name: Generate prisma client
-        env:
-         PRISMA_SCHEMA_DISABLE_ADVISORY_LOCK: 'true'
         run: npm run db:generate
+        env:
+         PRISMA_SCHEMA_DISABLE_ADVISORY_LOCK: true
 
       - name: Run Build
         run: npm run build
