--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,8 @@ jobs:
         run: npm install
 
       - name: Generate prisma client
-        run: npm run db:generate
+        run: npm run db:generate & db:migrate
+     
 
       - name: Run Build
         run: npm run build
