--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - name: Check Out Repo
         uses: actions/checkout@v2
+        
+      - name: Prepare Dockerfile
+        run: cp ./docker/Dockerfile.user ./Dockerfile
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -22,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./docker/Dockerfile.user
+          file: ./Dockerfile
           push: true
           tags: lucirace/bharat_wallet_user:latest # Replace with your Docker Hub username and repository
 
