--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,10 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: lucirace/bharat_wallet_user:latest # Replace with your Docker Hub username and repository
+          tags: lucirace/user_wallet:latest # Replace with your Docker Hub username and repository
 
       - name: Verify Pushed Image
-        run: docker pull lucirace/bharat_wallet_user:latest # Replace with your Docker Hub username and repository
+        run: docker pull lucirace/user_wallet:latest # Replace with your Docker Hub username and repository
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
@@ -38,9 +38,9 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            sudo docker pull lucirace/bharat_wallet_user:latest
+            sudo docker pull lucirace/user_wallet:latest
             sudo docker stop web-app || true
             sudo docker rm web-app || true
-            sudo docker run -d -p 3005:3000 --name web-app -e DATABASE_URL="${{secrets.DATABASE_URL}}" -e NEXTAUTH_URL="${{secrets.NEXTAUTH_URL}}" -e NEXTAUTH_SECRET="${{secrets.NEXTAUTH_SECRET}}" lucirace/bharat_wallet_user:latest
+            sudo docker run -d -p 3005:3000 --name web-app -e DATABASE_URL="${{secrets.DATABASE_URL}}" -e NEXTAUTH_URL="${{secrets.NEXTAUTH_URL}}" -e NEXTAUTH_SECRET="${{secrets.NEXTAUTH_SECRET}}" lucirace/user_wallet:latest
 
 
